--- a/GoVPNHelper/GoVPNHelper-Info.plist
+++ b/GoVPNHelper/GoVPNHelper-Info.plist
@@ -9,10 +9,10 @@
 	<key>CFBundleName</key>
 	<string>GoVPNHelper</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>anchor apple generic and identifier &quot;com.colharris.GoVPN&quot; and (certificate leaf[field.1.2.840.113635.100.6.1.9] /* exists */ or certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = K465DYH4Z2)</string>
+		<string>anchor apple generic and identifier "com.colharris.GoVPN" and (certificate leaf[field.1.2.840.113635.100.6.1.9] /* exists */ or certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = K465DYH4Z2)</string>
 	</array>
 </dict>
 </plist>
