--- a/GoVPNHelper/GoVPNHelper-Launchd.plist
+++ b/GoVPNHelper/GoVPNHelper-Launchd.plist
@@ -8,10 +8,10 @@
 	<string>/var/log/com.colharris.GoVPNHelper.log</string>
 	<key>Label</key>
 	<string>com.colharris.GoVPNHelper</string>
-	<key>XPCService</key>
+	<key>MachServices</key>
 	<dict>
-		<key>ServiceType</key>
-		<string>Application</string>
+		<key>com.colharris.GoVPNHelper</key>
+		<true/>
 	</dict>
 </dict>
 </plist>
