[WIP] Porting status menu over the new app removing need for vpn .mobileconfig file

--- a/GoVPN/Info.plist
+++ b/GoVPN/Info.plist
@@ -34,6 +34,8 @@
 	<true/>
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
+	<key>LSUIElement</key>
+	<true/>
 	<key>SMPrivilegedExecutables</key>
 	<dict>
 		<key>com.colharris.GoVPNHelper</key>
